<resources>
    <string name="app_name">Macro Rec</string>
    <string name="facebook_app_id">367429084146442</string>
    <string name="fb_login_protocol_scheme">fb367429084146442</string>
    <string name="login_email_default">E-Mail</string>
    <string name="login_password_default">Password</string>
    <string name="login">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="connect">Connect</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="log_in_google">Log In With Google</string>
    <string name="log_in_facebook">Log In With Facebook</string>
    <string name="log_in_instagram">Log In With Instagram</string>
    <string name="log_in_with_email">Login with E-mail</string>
    <string name="create_account">Create Account</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="title_activity_login_google">Sign in with Google</string>
    <string name="title_activity_login_facebook">Sign in with Facebook</string>
    <string name="title_activity_login_instagram">Sign in with Instagram</string>
    <string name="title_activity_connect_facebook">Connect Facebook</string>
    <string name="title_activity_connect_instagram">Connect Instagram</string>
    <string name="title_activity_connect_google">Connect Google</string>
    <string name="login_google">Log in with Google</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_instagram">Log in with Instagram</string>
    <string name="connect_google">Connect Google</string>
    <string name="connect_facebook">Connect Facebook</string>
    <string name="connect_instagram">Connect Instagram</string>
    <string name="prompt_email">Email</string>
    <string name="password_literal">Password</string>
    <string name="phone_number_literal">Phone Number</string>
    <string name="select_country_literal">Select Country</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name_literal">"User Name"</string>
    <string name="show_pass">"Show"</string>
    <string name="disclaimer">"By continuing you indicate that you have read and agree to MacroRec's Terms of Service and Privacy Policy"</string>
    <string name="type_mail">Please Type Your E-Mail</string>
    <string name="pass_ress_info">Password reset link will be sent to your e-mail.</string>
    <string name="ress_pass">Reset Password</string>
    <string name="email_hint">E-mail Address</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="searching_devices">SEARCHING DEVICES</string>
    <string name="be_sure_devices_are_turned_on">Be Sure Devices Are Turned On</string>
    <string name="settings">SETTINGS</string>
    <string name="device_control">DEVICE CONTROL</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="manuals">MANUALS</string>
    <string name="my_cloud_cap">MY CLOUD</string>
    <string name="give_advice">GIVE ADVICE</string>
    <string name="report_bug_cap">REPORT BUG</string>
    <string name="report_bug">REPORT BUG</string>
    <string name="contact_request_cap">CONTACT REQUEST</string>
    <string name="contact_request">Contact Request</string>
    <string name="live_control">LIVE CONTROL</string>
    <string name="motion_control">MOTION CONTROL</string>
    <string name="time_lapse">TIME LAPSE</string>
    <string name="rotary">ROTARY</string>
    <string name="settings_capitalized">Settings</string>
    <string name="my_cloud">My Cloud</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recovery_warning">Password reset link will be sent to your e-mail.</string>
    <string name="type_e_mail">Please type your e-mail address.</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_code_has_been_sent">Verification Code Has Been Sent</string>
    <string name="check_your_inbox">Please check your inbox for verification code.</string>
    <string name="ok">Okay</string>
    <string name="add_photo">Add\nPhoto</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="personal_information">Personal Information</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="my_devices">My Devices</string>
    <string name="my_presets">My Presets</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="dummy_name">Tevfik Altan Doyran</string>
    <string name="profession">Cinematographer</string>
    <string name="pro_status">Regular Account</string>
    <string name="account_verification">Account Verification</string>
    <string name="account_verification_notice">Please Check Your Inbox For Password Change Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="six_underscore">______</string>
    <string name="create_new_password">Create New Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="password_successfully_changed">Password Successfully Changed</string>
    <string name="new_pass_usable">You can use your new password to log in.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_device_warning">Devices will not function until logging in.</string>
    <string name="logout_cloud_note">Your all settings are being stored in cloud. You can login with other devices and keep using your settings.</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_details">Device Details</string>
    <string name="slide_module">Slide Module</string>
    <string name="device_name">Device Name</string>
    <string name="slide">Slide</string>
    <string name="axis">Axis</string>
    <string name="focus_module">Focus Module</string>
    <string name="focus">Focus</string>
    <string name="change">Change</string>
    <string name="tilt">Tilt</string>
    <string name="preview">Preview</string>
    <string name="pan">Pan</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="hamburger_content_description">A button that opens side menu.</string>
    <string name="back_button_content_description">A button that goes back.</string>
    <string name="selected_device_will_be_disconnected">Selected device will be disconnected.</string>
    <string name="apply">Apply</string>
    <string name="firmware">Firmware</string>
    <string name="fw_placeholder">V1_65</string>
    <string name="hardware">Hardware</string>
    <string name="hw_placeholder">13</string>
    <string name="serial_number">Serial Number</string>
    <string name="sn_placeholder">186479534</string>
    <string name="warranty_start_date">Warranty Start Date</string>
    <string name="wsd_placeholder">14.08.2019</string>
    <string name="warranty_expiry_date">Warranty Expiry Date</string>
    <string name="wed_placeholder">14.08.2021</string>
    <string name="check_for_update">Check For Update</string>
    <string name="non_caps_report_bug">Report Bug</string>
    <string name="ask_preset">Ask for preset selection at the \n beginning of each application.</string>
    <string name="preset">Preset</string>
    <string name="stand_by_duration">Stand By Duration</string>
    <string name="min">min</string>
    <string name="time_lapse_mode">Time Lapse Mode</string>
    <string name="fps_frame_per_second">FPS (Frame Per Second)</string>
    <string name="slide_sensitivity">Slide Sensitivity</string>
    <string name="pan_sensitivity">Pan Sensitivity</string>
    <string name="fix_percent">%</string>
    <string name="tilt_sensitivity">Tilt Sensitivity</string>
    <string name="disconnected">Disconnected</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="cm">CM</string>
    <string name="system_unit">System Unit</string>
    <string name="focus_sensitivity">Focus Sensitivity</string>
    <string name="not_paired">Not Paired</string>
    <string name="continuous">Continuous</string>
    <string name="cd_hamburger">A hamburger icon to open side menu.</string>
    <string name="cd_back_button">A button to go back.</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_lenses">My Lenses</string>
    <string name="calibration">CALIBRATION</string>
    <string name="send_advice">Send Advice</string>
    <string name="please_summarize_idea">Please Summarize Your Idea</string>
    <string name="please_summarize_bug">Please Summarize The Issue</string>
    <string name="add_image_or_video_optional">Add Image or Video (optional)</string>
    <string name="thanks_for_advice">Thank you for helping us \n improve your experience.</string>
    <string name="coupon_advice">Your discount coupon will be sent through \n e-mail after consideration of your idea.</string>
    <string name="coupon_bug">Your discount coupon will be sent through \n e-mail after validation of the bug.</string>
    <string name="coupon_info">You can use your discount coupon \n during your next purchase.</string>
    <string name="send_request">Send Request</string>
    <string name="please_summarize_need">Please Summarize Your Need</string>
    <string name="contact_info">This information will be forwarded to \n related department in order to enhance your experience.</string>
    <string name="contact_soon">We will contact you \n as soon as possible.</string>
    <string name="contact_forwarded">Your contact request has been forwarded to \n related department.</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="proceed">Proceed</string>
    <string name="hamburger_cd">A button that opens navigation drawer.</string>
    <string name="back_button_cd">A button that goes back.</string>
    <string name="proficiency">Proficiency</string>
    <string name="dummy_name2">İbrahim Cömert</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="rotary_video">Rotary Video</string>
    <string name="connect_s_m_a">Connect Social Media Accounts</string>
    <string name="change_l_i_i">Change Log In Information</string>
    <string name="privacy">Privacy</string>
    <string name="logged_in_acc_info">You are currently logged in with \n altan.doyran@macrorec.com</string>
    <string name="account_added">Account successfully connected.</string>
    <string name="new_sma_info">You can use your new account while logged in.</string>
    <string name="cd_icon_mail">An icon that resembles mail.</string>
    <string name="change_email">Change E-Mail</string>
    <string name="current_log_in">You are currently logged in with \n altan.doyran@macrorec.com</string>
    <string name="change_information">Change Information</string>
</resources>