<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appMainBackground"
    tools:context=".ChangeLogInInformation">

    <TextView
        android:id="@+id/currentEmail"
        style="@style/text_menu_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_log_in"
        android:textAlignment="center"
        android:textColor="#777777"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeEmail" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#969696"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/h_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentEmail"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        tools:text="" />

    <TextView
        android:id="@+id/changePassword"
        style="@style/headline_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/newPass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_guideline2" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/cd_back_button"
        android:focusable="true"
        android:onClick="cancelActivity"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_ico" />

    <TextView
        android:id="@+id/headline"
        style="@style/headline_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_l_i_i"
        app:layout_constraintBottom_toTopOf="@id/h_guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changeEmail"
        style="@style/headline_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/currentEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline1" />

    <Button
        android:id="@+id/resetPassButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient"
        android:onClick="onClickChangeInformation"
        android:text="@string/change_information"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1" />

    <EditText
        android:id="@+id/newPass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_literal"
        android:textColorHint="#88FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/newPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <TextView
        android:id="@+id/show_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/show_pass"
        android:textColor="#969696"
        app:layout_constraintBottom_toTopOf="@+id/newPass1"
        app:layout_constraintEnd_toEndOf="@+id/newPass1"
        app:layout_constraintTop_toBottomOf="@+id/newPass1" />

    <EditText
        android:id="@+id/newPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="#88FFFFFF"
        android:hint="@string/re_type_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPass1" />

    <TextView
        android:id="@+id/show_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/show_pass"
        android:textColor="#969696"
        app:layout_constraintBottom_toTopOf="@+id/newPass2"
        app:layout_constraintEnd_toEndOf="@+id/newPass2"
        app:layout_constraintTop_toBottomOf="@+id/newPass2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>